<resources>

    <string name="app_name">StudyGroup</string>
	<string name="info_screen">Info screen</string>
	<string name="notifs_screen">Notifs screen</string>
	<string name="groups_screen">Groups screen</string>
	<string name="join_group">Join Group</string>
	<string name="create_group">Create Group</string>
    <string name="coursename">Course Name</string>
    <string name="groupname">Group Name</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
	<string name="wednesday">We</string>
	<string name="thursday">Th</string>
	<string name="friday">Fr</string>
	<string name="saturday">Sa</string>
	<string name="sunday">Su</string>
	<string name="coursespinner_prompt">Course1</string>
	<string name="description">Group Description</string>
	<string name="location">Meeting Location</string>
	<string name="start_time">Start Time</string>
	<string name="end_time">End Time</string>
</resources>
