<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.groupstudyapp.CreateGroup" >

    
    <RelativeLayout  
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.groupstudyapp.CreateGroup" >
    
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_toRightOf="@+id/checkBox1"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_centerHorizontal="true"
        android:text="@string/wednesday" />


     <Spinner
         android:id="@+id/coursespinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/checkBox1"
         android:layout_below="@+id/groupNameText"
         android:prompt="@string/coursespinner_prompt" />

    <EditText
        android:id="@+id/groupNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/coursespinner"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/coursespinner"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/groupname" />
    
     <EditText
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/coursespinner"
         android:layout_alignRight="@+id/coursespinner"
         android:layout_below="@+id/coursespinner"
         android:hint="@string/description"
         android:ems="10" >
		
     </EditText>

     <EditText
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/description"
         android:layout_alignRight="@+id/description"
         android:layout_below="@+id/description"
         android:hint="@string/location"
         android:ems="10" >

     </EditText>

     <EditText
         android:id="@+id/startTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/location"
         android:layout_alignRight="@+id/location"
         android:layout_below="@+id/location"
         android:ems="10"
         android:hint="@string/start_time" >

     </EditText>

     <EditText
         android:id="@+id/endTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/startTime"
         android:layout_alignRight="@+id/startTime"
         android:layout_below="@+id/startTime"
         android:ems="10" 
         android:hint="@string/end_time">

     </EditText>

     <CheckBox
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox3"
         android:layout_alignBottom="@+id/checkBox3"
         android:layout_toRightOf="@+id/checkBox3"
         android:text="@string/thursday" />

     <CheckBox
         android:id="@+id/checkBox5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox4"
         android:layout_alignBottom="@+id/checkBox4"
         android:layout_alignRight="@+id/endTime"
         android:text="@string/friday" />

     <CheckBox
         android:id="@+id/checkBox6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/checkBox1"
         android:layout_below="@+id/endTime"
         android:layout_marginTop="67dp"
         android:text="@string/saturday" />

     <CheckBox
         android:id="@+id/checkBox7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox6"
         android:layout_alignBottom="@+id/checkBox6"
         android:layout_toRightOf="@+id/checkBox6"
         android:text="@string/sunday" />

     <CheckBox
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/checkBox7"
         android:layout_marginBottom="18dp"
         android:text="@string/monday" />

</RelativeLayout>

</ScrollView>